--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300i,400i");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 /*
 	Ethereal by HTML5 UP
@@ -293,7 +293,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.75);
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "Poppins";
 		font-size: 1rem;
 		font-weight: 300;
 		line-height: 1.65;
@@ -333,7 +333,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: rgba(255, 255, 255, 0.875);
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "Poppins";
 		font-weight: 700;
 		line-height: 1.3;
 		margin: 0 0 0.75rem 0;
@@ -617,7 +617,7 @@ input, select, textarea {
 	label {
 		color: rgba(255, 255, 255, 0.875);
 		display: block;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "Poppins";
 		font-size: 0.8rem;
 		font-weight: 700;
 		margin: 0 0 0.4875rem 0;
@@ -1499,7 +1499,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.875) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: "Poppins";
 		font-size: 0.6rem;
 		font-weight: 700;
 		height: 2.75rem;
